# django-producer

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  README.md  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
django_producer/: apps.py
django_producer/management/commands/: produce.py
django_producer/tests/: test_produce_command.py
test_project/: settings.py
