[metadata]
name = django-producer
version = attr: django_producer.__version__
author = Dmitry Gerasimenko
author_email = kiddima@gmail.com
description = Reproduce django apps from yaml config.
license = BSD
url = https://github.com/kidig/django-producer/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
packages = django_producer
include_package_data = True
setup_requires =
    setuptools-twine
    pytest-runner

[check]
metadata = True

[clean]
all = True

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[pycodestyle]
max-line-length = 120
exclude = build,dist,docs,.tox,.git,venv

[flake8]
max-line-length = 120
exclude = build,dist,docs,.tox,.git,venv

[isort]
profile = black

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = tests.py test_*.py
testpaths = django_producer test_project
norecursedirs = .tox .git */migrations/* */static/* docs venv
addopts = -v --tb=short
